v1.0.3 fix: export css background set to transparent fix: export css scrollbar set to none display fix: export css hide poll panel add: github link and author page link opt: set minimum screen width is 700px

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,7 @@
 @import './component/$InputComponent';
+
+$min_width: 1200px;
+$view_width: 1200px;
 :root {
     --background-color: #131313;
     --font-family : system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -8,10 +11,10 @@ body {
     justify-content: center;
     font-family: var(--font-family);
     overflow-y: scroll;
+    overflow-x: hidden;
     background-color: var(--background-color);
     color: #ffffff;
     font-size: 14px;
-
 }
 
 html {
@@ -71,12 +74,23 @@ app {
     width: 100%;
 
     h1 {
-        span {
+        span, a {
             font-size: 14px;
             color: #ffffff90;
             font-weight: 100;
             letter-spacing: 0.1rem;
             margin-left: 10px;
+        }
+
+        a {
+            background-color: #ffffff10;
+            padding: 0.1rem 0.3rem;
+            border-radius: 4px;
+            text-decoration: none;
+            &:hover {
+                background-color: #ffffff20;
+                color: white;
+            }
         }
     }
 
@@ -88,9 +102,19 @@ app {
         display: flex;
         gap: 1rem;
 
+        @media (max-width: $view_width) {
+            flex-direction: column;
+            justify-content: center;
+            padding-bottom: 50vh;
+        }
+
         .console {
             width: 100%;
             max-width: 60%;
+
+            @media (max-width: $view_width) {
+                max-width: 100%;
+            }
 
             .menu {
                 display: flex;
@@ -245,6 +269,16 @@ app {
             left: calc(50vw + 150px);
             display: flex;
             flex-direction: column;
+
+            @media (max-width: $view_width) {
+                left: 0;
+                top: 50vh;
+                height: 50vh;
+                width: 100%;
+                padding: 0;
+                border:none;
+                background-color: var(--background-color);
+            }
 
             header {
                 margin-block: 0.6rem;
